[package]
name = "uri_path_router"
version = "0.1.0"
authors = ["Ivo C.S. Wingelaar <ivo@codeforge.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/IvoWingelaar/uri_path_router"
keywords = ["uri", "routing"]
edition = "2021"
description = "A proc-macro crate that generates flattened enums for routing"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
